# trading

./: .env.example  .gitignore  AUTOMATION_FIX_SUMMARY.md  MORNING_AUTOMATION.md  Makefile  PAIRS_TRADE_ADAPTIVE.md  TWS_AUTO_LOGIN_SETUP.md  add_pairs_watchlist.sh  architecture.md  compose.yaml  monitor_strategy.sh  notes.txt  pairs_trading_kalman_params.md  potential_pairs.csv  potential_pairs.md  potential_pairs.txt  reproduce_issue.py  run_optimizer_new_pairs.sh  run_optimizer_pairs_adaptive.sh  tasks.md  test_order_placement.sh  tickers.txt  update_pairs_trading_params.py
backend/: Dockerfile  OBSERVABILITY.md  alembic.ini  pyproject.toml  requirements.txt  test_strategy_signals.py  test_tws_bridge_simple.py  update_pairs_trading_params.py  verify_tws_sync.py
backend/migrations/: env.py
backend/migrations/versions/: 1b68dcea-b27_add_pairs_analysis_table.py  1b68dceab27_add_pairs_analysis_table.py  2979d865e9c9_add_adf_and_coint_statistics_to_potential_pairs.py  40ad4f97d891_add_comprehensive_backtest_and_.py  489e472097e9_add_advanced_order_types_and_algo_.py  84403efd8a90_add_parameter_sensitivity_table_for_.py  97aab0116466_initial_schema.py  a1b2c3d4e5f6_add_risk_violations_table.py  a1e46e33cb22_add_missing_backtest_and_optimization_.py  add_ready_to_trade_to_strategies.py  b1f92cd19e5c_create_historical_job_tables.py  c6c93d0c1df8_add_data_sync_status_table.py  d7e8f9a1b2c3_add_position_context_table.py  data_collection_tracking_add_data_collection_tables.py  ef722373db3b_merge_migration_branches.py
backend/src/api/: README.md  main.py  research.py
backend/src/common/: __init__.py  circuit_breaker.py  config.py  correlation.py  db.py  debug.py  health_monitor.py  (+7 more)
backend/tests/: __init__.py
(+128 files in other folders)
