[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = "Algorithmic Trading Bot with Interactive Brokers Integration"
authors = ["Trading Bot <trading@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Web Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
# Database
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
# Interactive Brokers
ib-insync = "^0.9.86"
# Data Processing
pandas = "^2.1.3"
numpy = "^1.25.2"
# Configuration & Validation
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
# HTTP Client
httpx = "^0.25.2"
# WebSocket
websockets = "^12.0"
# Async
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
# Logging
structlog = "^23.2.0"
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
# Utilities
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
# Development
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
# Testing
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
